--- a/public.html
+++ b/public.html
@@ -3,6 +3,12 @@
   <head>
     <title>Twitch VOD Player</title>
     <link href="https://vjs.zencdn.net/7.20.3/video-js.css" rel="stylesheet" />
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+      }
+    </style>
   </head>
   <body>
     <video
@@ -15,11 +21,28 @@
       data-setup="{}"
     >
       <source
-        src="https://dgeft87wbj63p.cloudfront.net/ef599f3aeb46095bda1b_xari_43517946200_1736112807/chunked/index-dvr.m3u8"
+        src="https://m3u8.snwfdhmp.com/m3u8-proxy?url=https%3A%2F%2Fdgeft87wbj63p.cloudfront.net%2Fef599f3aeb46095bda1b_xari_43517946200_1736112807%2Fchunked%2Findex-dvr.m3u8"
         type="application/x-mpegURL"
       />
     </video>
 
     <script src="https://vjs.zencdn.net/7.20.3/video.min.js"></script>
+    <script>
+      let lastWidth = -1;
+      let lastHeight = -1;
+    const updateVideoSizeIfNeeded = () => {
+      if (window.innerWidth === lastWidth && window.innerHeight === lastHeight) {
+        return;
+      }
+      const video = document.getElementById('my-video');
+      video.setAttribute('width', window.innerWidth);
+      video.setAttribute('height', window.innerHeight);
+    };
+    
+    setInterval(updateVideoSizeIfNeeded, 1000);
+    document.addEventListener("DOMContentLoaded", function () {
+      updateVideoSizeIfNeeded();
+      });
+    </script>
   </body>
 </html>
